# ASCII-Art

./: .gitignore  CMakeLists.txt  README.md  gif.sh  main.c  ppm_data.c  ppm_data.h  readimg.c  update.c  update.h
pics/: bonhomme.ppm  dogo.ppm  first.ppm  lenna.ppm  picturetest.ppm  pixel.ppm  pwet-pwet.ppm  rose.ppm  téléchargement.ppm
src/: CMakeLists.txt  display.c  display.h  main.c  ppm_data.c  ppm_data.h  update.c  update.h  utils.c  utils.h
